Version next

Version 2011.07.20.20
* Prevent XPCOM interface (nsIDOMWindow) ID changes from breaking S4E.
* Fix bug when showing min download progress.
* Update locales for new strings.
* Updated translations for: da, he

Version 2011.07.13.20b
* Add option to show average/max/min download progress.
* Fix download progress margins.
* Fix download progress on text-only toolbars.
* Update locales for new strings.
* Updated translations for: bg-BG, el, es-ES, it-IT, ja-JP, nb-NO, pl, ro, ru

Version 2011.07.03.16b
* Integrate with Firefox's URL trimming.
* Separate built-in preferences into their own block.
* Add a progress line to the download button.
* Update locales for new strings.

Version 2011.06.28.22
* Hide preferences that aren't supported by a particular version of Firefox.

Version 2011.06.22.19b
* Firefox 7.0a1 changed the nsIDOMWindow interface ID. Make S4E compatible.
* Fix progress bar when opening a link in a new window.
* Update locales for new strings.
* Updated translations for: cs, da, es-ES, he, hsb-DE, hu, it-IT, nb-NO, ro, sr, sv-SE

Version 2011.06.13.19b
* Tweak some preference UI strings.
* Rewrite the CSS background editor using XBL.
* Add background-repeat support to the simple editor.
* Add background-position support to the simple editor.
* Add preview progress bar to the editor.
* Add a preference to control Firefox's domain highlighting in the location bar.
* Add a preference to control statusbar-display mirroring on mouse-over.
* Add a preference to control statusbar-display mirroring on find bar open.
* Updated translations for: sr

Version 2011.05.07.18b
* Firefox 6.0a1 changed the nsIDOMWindow interface ID. Make S4E compatible.
* Fix unchecked usage of the urlbar element (causes errors when it's not on a toolbar).
* Minimize contact with the XULBrowserWindow object, and make binding to it dynamic and [hopefully] more robust.
* Refactor some repetitive code, and use array based generation/execution for repetitive tasks.