@@ -1,4 +1,5 @@
 Version next
+* Fix to prevent PluralForm utility from going AWOL.
 
 Version 2011.07.20.20
 * Prevent XPCOM interface (nsIDOMWindow) ID changes from breaking S4E.
